<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/container_image"
        android:layout_width="100dp"
        android:layout_height="128dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/container_image"
        app:layout_constraintTop_toTopOf="@id/container_image" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="16dp"
        android:text="@string/product_description"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/container_image"
        app:layout_constraintTop_toBottomOf="@+id/product_description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_image" />

</androidx.constraintlayout.widget.ConstraintLayout>